css fix, tap on mobile

--- a/index.css
+++ b/index.css
@@ -29,8 +29,8 @@ body {
 
   margin: 0;
   padding: 0;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-color: var(--light);
 
   animation-duration: 0s;
